// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "group": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "inviteLink": "/38adslkjlkj3",
      "slug": "foo",
    },
    "inviteLink": "/38adslkjlkj3",
  },
  "inviteLink": "https://www.hylo.comundefined",
  "invites": Array [
    SessionBoundModel {
      "_fields": Object {
        "email": "john@doe.com",
        "group": "99",
        "id": "33",
      },
    },
  ],
  "pending": undefined,
  "pendingCreate": undefined,
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "graphql": Object {
    "query": "query ($groupId: ID) {
        group (id: $groupId) {
          id
          name
          slug
          invitePath
          allowGroupInvites
          pendingInvitations (first: 100) {
            hasMore
            items {
              id
              email
              createdAt
              lastSentAt
            }
          }
        }
      }",
    "variables": Object {
      "groupId": "99",
    },
  },
  "meta": Object {
    "extractModel": "Group",
  },
  "type": "InvitePeople/FETCH_GROUP_SETTINGS",
}
`;

exports[`mergeProps merges the props 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($groupId: ID) {
        regenerateAccessCode(groupId: $groupId) {
          id
          invitePath
        }
      }",
    "variables": Object {
      "groupId": "99",
    },
  },
  "meta": Object {
    "extractModel": "Group",
  },
  "type": "InvitePeople/REGENERATE_ACCESS_CODE",
}
`;

exports[`mergeProps merges the props 3`] = `
Object {
  "graphql": Object {
    "query": "mutation ($groupId: ID, $data: InviteInput) {
        createInvitation(groupId: $groupId, data: $data) {
          invitations {
            id,
            email,
            createdAt,
            lastSentAt,
            error
          }
        }
      }",
    "variables": Object {
      "data": Object {
        "emails": Array [
          "john@doe.com",
        ],
        "message": "MyMessage",
      },
      "groupId": "99",
    },
  },
  "meta": Object {
    "emails": Array [
      "john@doe.com",
    ],
    "groupId": "99",
    "optimistic": true,
  },
  "type": "InvitePeople/CREATE_INVITATIONS",
}
`;

exports[`mergeProps merges the props 4`] = `
Object {
  "graphql": Object {
    "query": "mutation ($groupId: ID) {
        reinviteAll(groupId: $groupId) {
          success
        }
      }",
    "variables": Object {
      "groupId": "99",
    },
  },
  "meta": Object {
    "groupId": "99",
    "optimistic": true,
  },
  "type": "InvitePeople/REINVITE_ALL",
}
`;

exports[`mergeProps merges the props 5`] = `
Object {
  "graphql": Object {
    "query": "mutation ($invitationToken: ID) {
        expireInvitation(invitationId: $invitationToken) {
          success
        }
      }",
    "variables": Object {
      "invitationToken": 10,
    },
  },
  "meta": Object {
    "invitationToken": 10,
    "optimistic": true,
  },
  "type": "InvitePeople/EXPIRE_INVITATION",
}
`;

exports[`mergeProps merges the props 6`] = `
Object {
  "graphql": Object {
    "query": "mutation ($invitationToken: ID) {
        resendInvitation(invitationId: $invitationToken) {
          success
        }
      }",
    "variables": Object {
      "invitationToken": 10,
    },
  },
  "meta": Object {
    "invitationToken": 10,
    "optimistic": true,
  },
  "type": "InvitePeople/RESEND_INVITATION",
}
`;

exports[`mergeProps merges the props 7`] = `
Object {
  "graphql": Object {
    "query": "mutation ($groupId: ID, $data: Boolean) {
        allowGroupInvites(groupId: $groupId, data: $data) {
          id
        }
      }",
    "variables": Object {
      "data": true,
      "groupId": 1,
    },
  },
  "meta": Object {
    "groupId": 1,
    "optimistic": true,
  },
  "type": "InvitePeople/ALLOW_GROUP_INVITES",
}
`;

exports[`mergeProps merges the props 8`] = `
Object {
  "allowGroupInvites": [Function],
  "createInvitations": [Function],
  "createInvitationsMaker": [Function],
  "expireInvitation": [Function],
  "fetchGroupSettings": [Function],
  "fetchGroupSettingsMaker": [Function],
  "group": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "inviteLink": "/38adslkjlkj3",
      "slug": "foo",
    },
    "inviteLink": "/38adslkjlkj3",
  },
  "inviteLink": "https://www.hylo.comundefined",
  "invites": Array [
    SessionBoundModel {
      "_fields": Object {
        "email": "john@doe.com",
        "group": "99",
        "id": "33",
      },
    },
  ],
  "pending": undefined,
  "pendingCreate": undefined,
  "regenerateAccessCode": [Function],
  "regenerateAccessCodeMaker": [Function],
  "reinviteAll": [Function],
  "reinviteAllMaker": [Function],
  "resendInvitation": [Function],
}
`;
